<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/auto_location_top_view_bar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchMinWidth="60dp"
            app:switchPadding="50dp"
            android:text="@string/main_service_status"
            android:checked="false"
            android:id="@+id/switch_main_service"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchMinWidth="60dp"
            app:switchPadding="50dp"
            android:text="@string/main_service_binder"
            android:checked="false"
            android:id="@+id/switch_main_service_binder"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchMinWidth="60dp"
            app:switchPadding="50dp"
            android:text="@string/phone_screen_monitor_switch"
            android:checked="false"
            android:id="@+id/switch_phone_screen_monitor"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchMinWidth="60dp"
            app:switchPadding="50dp"
            android:text="@string/phone_battery_monitor_switch"
            android:checked="false"
            android:id="@+id/switch_phone_battery_monitor"/>
    </LinearLayout>
</LinearLayout>
