<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/auto_location_top_view_bar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchMinWidth="60dp"
            app:switchPadding="50dp"
            android:text="@string/main_service_status"
            android:checked="false"
            android:id="@+id/switch_main_service"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchMinWidth="60dp"
            app:switchPadding="50dp"
            android:text="@string/main_service_binder"
            android:checked="false"
            android:id="@+id/switch_main_service_binder"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="auto"
            android:id="@+id/auto_location_service_open"
            android:textSize="16sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="single"
            android:id="@+id/get_once_locaiton_btn"
            android:textSize="16sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="close"
            android:id="@+id/auto_location_service_close"
            android:textSize="16sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="test"
            android:id="@+id/btn_auto_location_test"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_url_of_data_server"
            android:text="http://slayer.top:9999/location/insert"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmInterval" />

        <EditText
            android:id="@+id/et_location_interval"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="20"
            android:inputType="number" >
            <requestFocus />
        </EditText>
    </LinearLayout>
</LinearLayout>
